# automatic-tennis-ball-sounds

./: README.md  pyproject.toml
scripts/: add_sound.py  animate_sprite.py  bounce_back_and_forth.py  bounce_x_and_y.py  convert_square_to_oop.py  main.py  move_automatically.py  spritesheet.py  tutorial_1.py
sounds/: ball-sound-11.wav.BLOCK  ball-sound-12.wav.BLOCK  ball-sound-13.wav.BLOCK
