[tool.poetry]
name = "automatic-tennis-ball-sounds"
version = "0.1.0"
description = "tennis ball bouncing asmr"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
